[package]
name = "qx_rs_server_wechat"
version = "0.1.0"
edition = "2021"

authors = ["labi3285 <766043285@qq.com>"]
description = "best practice of server wechat api in rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/labi3285/qx_rs_server_wechat"
homepage = "https://github.com/labi3285/qx_rs_server_wechat"
keywords = ["server", "wechat"]
categories = ["web-programming"]

[dependencies]

#qx_rs_server = "0.1.0"
qx_rs_server = { path = "../qx_rs_server" }

tokio = { version = "1.37.0", features = ["full"] }

askama = "0.12.1"
axum-core = "0.4.3"
axum = "0.7.5"
chrono = "0.4.38"

tracing = "0.1.40"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["chrono"] }
serde_repr = "0.1.19"

wechat-pay-rust-sdk = { version = "0.2.14", features = ["debug-print"] }
once_cell = "1.19.0"
hmac = "0.12.1"
sha2 = "0.10.8"





